--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body onkeyup="keyCall()">
        <div class="container">
           <div id="heading" class="row">
-            <div class="col-12"><center><h3>A JavaScript Based Calculator</h3></center></div>    
+            <div class="col-12 text-align-center"><h3>A JavaScript Based Calculator</h3></div>    
           </div>
           <div class="row">
             <div class="col-12" id="main">   
@@ -21,7 +21,7 @@
                        <td colspan="4"><input onkeyup="keyCall(event)" onblur="this.focus()" placeholder="0" type="text"  id="display"  autofocus/> </td>
                    </tr>
                    <tr>
-                       <td style=" text-align: center; font-size: 25px; padding:10px" colspan="4">Basic Calculator</td>
+                       <td style=" text-align:center; font-size: 25px; padding:10px" colspan="4">Basic Calculator</td>
                        
                    </tr>
                    <tr>
