--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body onkeyup="keyCall()">
        <div class="container">
           <div id="heading" class="row">
-            <div class="col-12 text-align-center"><h3>A JavaScript Based Calculator</h3></div>    
+            <div class="col-12 text-center"><h3>A JavaScript Based Calculator</h3></div>    
           </div>
           <div class="row">
             <div class="col-12" id="main">   
