--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <script src="Calculator.js"></script>
         <link href="Calculator.css" rel="stylesheet" type="text/css">
+        <title>Calculator</title>
      </head>
      <body>
         <div class="container">
@@ -18,7 +19,7 @@
              <div class="col-12" id="calculator">   
              <center><table>
                     <tr>
-                        <td id="displaycontainer" colspan="4"><div id="display">0</div></td>
+                        <td id="displaycontainer" colspan="4"><input id="display" placeholder="0" disabled/></td>
                     </tr>
                     <tr>
                         <td id="calculatorname" colspan="4">Basic Calculator</td>
